[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}


[project]
name = "lyse"
description = "Automated analysis queue for labscript suite experiments"
authors = [
    {name = "The labscript suite community", email = "labscriptsuite@googlegroups.com"},
]
keywords = ["experiment control", "automation"]
license = {file = 'LICENSE.txt'}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
    "desktop-app>=0.1.2",
    "h5py",
    "labscript_utils>=3.3.0",
    "matplotlib",
    "numpy",
    "pandas>=1.5",
    "qtutils>=2.2.2",
    "scipy",
    "tzlocal",
    "zprocess>=2.2.2",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "http://labscriptsuite.org/"
Documentation = "https://docs.labscriptsuite.org/"
Repository = "https://github.com/labscript-suite/lyse/"
Downloads = "https://github.com/labscript-suite/lyse/releases/"
Tracker = "https://github.com/labscript-suite/lyse/issues/"

[project.optional-dependencies]
docs = [
    "PyQt5",
    "Sphinx==7.2.6",
    "sphinx-rtd-theme==2.0.0",
    "myst_parser==2.0.0",
]

[project.scripts]
lyse = "desktop_app:entry_point"

[project.gui-scripts]
lyse-gui = "desktop_app:entry_point"
