[metadata]
name = lyse
description = Automated analysis queue for labscript suite experiments
long_description = file: README.md
long_description_content_type = text/markdown
author = The labscript suite community
author_email = labscriptsuite@googlegroups.com
url = http://labscriptsuite.org
project_urls = 
    Source Code=https://github.com/labscript-suite/lyse
    Download=https://github.com/labscript-suite/lyse/releases
    Tracker=https://github.com/labscript-suite/lyse/issues
keywords = experiment analysis automation
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  desktop-app>=0.1.2
  h5py
  importlib_metadata
  labscript_utils>=3.0.0
  matplotlib
  numpy
  pandas>=0.21
  qtutils>=2.2.2
  runmanager>=3.0.0
  scipy
  tzlocal
  zprocess>=2.2.2

[options.entry_points]
console_scripts =
  lyse = desktop_app:entry_point
gui_scripts = 
  lyse-gui = desktop_app:entry_point

[options.extras_require]
pyqt = PyQt5
docs = 
  PyQt5
  Sphinx==4.4.0
  sphinx-rtd-theme==0.5.2
  recommonmark==0.6.0
  m2r==0.2.1
  mistune<2.0.0
